Edit spaghetti_bolognese.html, add description and ingredients

--- a/recipes/spaghetti_bolognese.html
+++ b/recipes/spaghetti_bolognese.html
@@ -8,6 +8,31 @@
 <body>
     <h1>Spaghetti Bolognese</h1>
     <img src="../img/spag_bol.jpg" alt="A finished bowl of spaghetti bolognese" height="200" width="200">
-    
+    <h3>Description</h3>
+    <p>The following recipe is for an utterly scrumption spaghetti bolognese.
+        I found this recipe whilst hiking through the hills of Bologna, and I encountered
+        an old Italian couple. Their family had lived in these hills for generations,
+        and they swore that their bolognese recipe was unmatched.
+    </p>
+    <p> I sat down to eat dinner with them that evening, and they were not wrong. 
+        This bolognese will blow your mind! Luckily they left me their recipe, which
+        includes a secret ingredient... 
+    </p>
+<p> <strong> See if you can spot it!</strong></p>
+<h3>Ingredients</h3>
+<ul>
+    <li>Beef mince</li>
+    <li>Pork mince</li>
+    <li>Tomato passata</li>
+    <li>Two red onions</li>
+    <li>Three cloves garlic</li>
+    <li>850ml beef stock</li>
+    <li>2 tsp of all - Oregano, sage, basil, thyme</li>
+    <li>4 bay leaves</li>
+    <li>1 scoop vanilla ice cream</li>
+
+</ul>
+
+
 </body>
 </html>
