Add method section to spaghetti_bolognese.html

--- a/recipes/spaghetti_bolognese.html
+++ b/recipes/spaghetti_bolognese.html
@@ -30,9 +30,26 @@
     <li>2 tsp of all - Oregano, sage, basil, thyme</li>
     <li>4 bay leaves</li>
     <li>1 scoop vanilla ice cream</li>
-
 </ul>
 
+<h3>Method</h3>
+<ol>
+    <li>Finely chop the onions and garlic, and add onions to a pan along with the 
+        olive oil. Cook for 10 minutes then add the garlic. Stir for 1 minute.
+    </li>
+    <li>Turn the heat to high and add all the mince. Brown the meat and then add the 
+        herbs and beef stock.
+    </li>
+    <li>Add the passata and the bay leaves, bring to the boil and then simmer (lid on) for 1 hour</li>
+    <li>Remove the lid and simmer for a further 30 minutes, stirring regularly. Add the
+        ice cream 5 minutes before the end and mix well.
+    </li>
+    <li>Cook up your desired amount of spaghetti, and then add this to the bolognese
+    sauce with some of the pasta water.
+    </li>
+    <li>Stir round then serve hot!</li>
+
+</ol>
 
 </body>
 </html>
