Create new recipe pages. Create list on index for all recipe links

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="../odin-recipes/recipes/spaghetti_bolognese.html" target="blank" rel="noreferrer""noopener">Spaghetti Bolognese</a>
+    <ul>
+    <li><a href="../odin-recipes/recipes/spaghetti_bolognese.html" target="blank" rel="noreferrer""noopener">Spaghetti Bolognese</a></li>
+    <li><a href="../odin-recipes/recipes/beans_on_toast.html" target="blank" rel="noreferrer""noopener">Spaghetti Bolognese</a></li>
+    <li><a href="../odin-recipes/recipes/cod_potato_hash.html" target="blank" rel="noreferrer""noopener">Spaghetti Bolognese</a></li>
+    </ul>
 </body>
 </html>
