Edit text for anchors on index.hmtl to be relevant to link destination

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <h1>Odin Recipes</h1>
     <ul>
     <li><a href="../odin-recipes/recipes/spaghetti_bolognese.html" target="blank" rel="noreferrer""noopener">Spaghetti Bolognese</a></li>
-    <li><a href="../odin-recipes/recipes/beans_on_toast.html" target="blank" rel="noreferrer""noopener">Spaghetti Bolognese</a></li>
-    <li><a href="../odin-recipes/recipes/cod_potato_hash.html" target="blank" rel="noreferrer""noopener">Spaghetti Bolognese</a></li>
+    <li><a href="../odin-recipes/recipes/beans_on_toast.html" target="blank" rel="noreferrer""noopener">Beans on Toast</a></li>
+    <li><a href="../odin-recipes/recipes/cod_potato_hash.html" target="blank" rel="noreferrer""noopener">Cod Potato Hash</a></li>
     </ul>
 </body>
 </html>
