Fix spelling errors on each recipe page

--- a/recipes/spaghetti_bolognese.html
+++ b/recipes/spaghetti_bolognese.html
@@ -9,7 +9,7 @@
     <h1>Spaghetti Bolognese</h1>
     <img src="../img/spag_bol.jpg" alt="A finished bowl of spaghetti bolognese" height="200" width="200">
     <h3>Description</h3>
-    <p>The following recipe is for an utterly scrumption spaghetti bolognese.
+    <p>The following recipe is for an utterly scrumptious spaghetti bolognese.
         I found this recipe whilst hiking through the hills of Bologna, and I encountered
         an old Italian couple. Their family had lived in these hills for generations,
         and they swore that their bolognese recipe was unmatched.
