Add content to cod recipe page. Amend typo on beans recipe

--- a/recipes/beans_on_toast.html
+++ b/recipes/beans_on_toast.html
@@ -24,7 +24,7 @@ a personal trainer and started increasing my food intake.</p>
     <li>3 thick slices of bread</li>
     <li>1 tin baked beans</li>
     <li>4 slices of cooked turkey</li>
-    <li>4 slices cheese (I used vegan due my dairy allergy)</li>
+    <li>4 slices of cheese (I used vegan due to my dairy allergy)</li>
     <li>Some hot sauce for flavour</li>
 </ul>
 <h3>Method</h3>
