Change align of decsription text. Add background colour tto headings

--- a/recipes/beans_on_toast.html
+++ b/recipes/beans_on_toast.html
@@ -4,39 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Beans On Toast</title>
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
     <h1><strong>BIG</strong> Beans on Toast</h1>
 <img src="../img/beans.jpeg" alt="A picture of some beans on toast, with grated cheese
 on top" height="179" width="318">
 <h3>Description</h3>
-<p>This <strong>big</strong> beans on toast recipe is actually my own creation.
+<p class="desc">This <strong>big</strong> beans on toast recipe is actually my own creation.
 I underwent a serious gym journey a few years ago, back in 2021. I had decided that
 I'd had enough of being skinny, and wanted to put on some serious size. I got myself
 a personal trainer and started increasing my food intake.</p>
-<p> The biggest challenge I had was breakfast. I found it difficult to think of a 
+<p class="desc"> The biggest challenge I had was breakfast. I found it difficult to think of a 
     meal I could eat in the morning which gave me the calories I needed.
     Then I decided, I'd just make a <em>massive</em> beans on toast. Here's the recipe.
     Good luck eating this in one sitting!
 </p>
 <h3>Ingredients</h3>
 <ul>
-    <li>3 thick slices of bread</li>
+    <li class="even">3 thick slices of bread</li>
     <li>1 tin baked beans</li>
-    <li>4 slices of cooked turkey</li>
+    <li class="even">4 slices of cooked turkey</li>
     <li>4 slices of cheese (I used vegan due to my dairy allergy)</li>
-    <li>Some hot sauce for flavour</li>
+    <li class="even">Some hot sauce for flavour</li>
 </ul>
 <h3>Method</h3>
 <ol>
-    <li>Pop the 3 slices of bread in the toaster, toast to preference.</li>
+    <li class="even">Pop the 3 slices of bread in the toaster, toast to preference.</li>
     <li>Heat the baked beans on a medium-low heat for 4-5 minutes.</li>
-    <li>Add a few dashes of hot sauce to the beans, to taste.</li>
+    <li class="even">Add a few dashes of hot sauce to the beans, to taste.</li>
     <li>Once everything is heated/toasted, time to plate up!</li>
-    <li>Lay down the toast first, and butter each slice. Then pour the beans over
+    <li class="even">Lay down the toast first, and butter each slice. Then pour the beans over
         evenly. </li>
     <li>Next, lay the slices of cheese over the beans.</li>
-    <li>Lay the slices of turkey on top of the cheese. Then finally, a few more dashes
+    <li class="even">Lay the slices of turkey on top of the cheese. Then finally, a few more dashes
         of hot sauce to finish!</li>
 </ol>
 
