--- a/recipes/cod_potato_hash.html
+++ b/recipes/cod_potato_hash.html
@@ -4,43 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cod & Potato Hash</title>
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
     <h1>Cod & Potato Hash</h1>
 <img src="../img/cod.jpg" alt="Cod fillet on top of a potato, red pepper, chorizo and spinach hash. 
 Served on a white plate" height="200" width="200">
 <h3>Description</h3>
-<p>I was talking to my family the other day, and it dawned on me that I have no memory of why I found
+<p class="desc">I was talking to my family the other day, and it dawned on me that I have no memory of why I found
     this recipe. I don't know if I was looking for a cod dish, a potato dish, or maybe even a <em>spinach</em>
 dish. I can't recall! I have to say though, it's a classic. It's quickly been assigned as my <strong>signature</strong>
 dish by everyone I've cooked it for. It's a real hit.</p>
-<p> It's so incredibly simple - only a few ingredients needed and next to no technical ability in the kitchen is required.
+<p class="desc"> It's so incredibly simple - only a few ingredients needed and next to no technical ability in the kitchen is required.
     The flavours all match together so perfectly, and the chorizo (as it so often is) is the real star of
     this dish. Its smokey taste really punches through, it's glorious. Let's get into it!
 </p>
 <h3>Ingredients</h3>
 <ul>
-    <li>400g fluffy potatoes (Maris Piper are great)</li>
+    <li class="even">400g fluffy potatoes (Maris Piper are great)</li>
     <li>4 x 150g cod loin fillets, skin on</li>
-    <li>1bsp rapeseed oil</li>
+    <li class="even">1bsp rapeseed oil</li>
     <li>100g chorizo, finely chopped</li>
-    <li>1/2tsp smoked paprika</li>
+    <li class="even">1/2tsp smoked paprika</li>
     <li>1 red pepper, cut into thin strips</li>
-    <li>150g rainbow chard or spinach, roughly chopped</li>
+    <li class="even">150g rainbow chard or spinach, roughly chopped</li>
 </ul>
 <h3>Method</h3>
 <ol>
-    <li>Preheat your oven to 180C/Gas 4.</li>
+    <li class="even">Preheat your oven to 180C/Gas 4.</li>
     <li>Bring a saucepan of water to the boil, add the cubed potatoes and cook until tender, drain.</li>      
-    <li>Place a large frying pan over a medium-high heat, season the cod loins with salt and milled pepper
+    <li class="even">Place a large frying pan over a medium-high heat, season the cod loins with salt and milled pepper
         and rub the olive oil all over. Pan fry on the skin side for 5 minutes, 
         transfer to an oven tray and cook in the oven for about 10 minutes, 
         depending on the thickness of your cod.</li>
     <li>Meanwhile in the same pan add the chorizo and a little more rapeseed oil if required.</li>
-    <li>Cook the chorizo over a medium heat until the oils come out, next add the potatoes and sprinkle the paprika over.
+    <li class="even">Cook the chorizo over a medium heat until the oils come out, next add the potatoes and sprinkle the paprika over.
         Continue frying until the potatoes start to crisp on the edges while stirring every so often.</li>
     <li>Add the peppers and chard, pop a lid on, turn the heat down and cook until the chard wilts.</li>
-    <li>Divide the potato and chorizo mixture between your plates, top with the cod and serve.</li>
+    <li class="even">Divide the potato and chorizo mixture between your plates, top with the cod and serve.</li>
 </ol>
 
 </body>
