--- a/recipes/spaghetti_bolognese.html
+++ b/recipes/spaghetti_bolognese.html
@@ -4,48 +4,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spaghetti Bolognese</title>
-    <link rel="stylesheet" href="stylesheet.css"
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
     <h1>Spaghetti Bolognese</h1>
     <img src="../img/spag_bol.jpg" alt="A finished bowl of spaghetti bolognese" height="200" width="200">
     <h3>Description</h3>
-    <p>The following recipe is for an utterly scrumptious spaghetti bolognese.
+    <p class="desc">The following recipe is for an utterly scrumptious spaghetti bolognese.
         I found this recipe whilst hiking through the hills of Bologna, and I encountered
         an old Italian couple. Their family had lived in these hills for generations,
         and they swore that their bolognese recipe was unmatched.
     </p>
-    <p> I sat down to eat dinner with them that evening, and they were not wrong. 
+    <p class="desc"> I sat down to eat dinner with them that evening, and they were not wrong. 
         This bolognese will blow your mind! Luckily they left me their recipe, which
         includes a secret ingredient... 
     </p>
 <p> <strong> See if you can spot it!</strong></p>
 <h3>Ingredients</h3>
 <ul>
-    <li>Beef mince</li>
+    <li class="even">Beef mince</li>
     <li>Pork mince</li>
-    <li>Tomato passata</li>
+    <li class="even">Tomato passata</li>
     <li>Two red onions</li>
-    <li>Three cloves garlic</li>
+    <li class="even">Three cloves garlic</li>
     <li>850ml beef stock</li>
-    <li>2 tsp of all - Oregano, sage, basil, thyme</li>
+    <li class="even">2 tsp of all - Oregano, sage, basil, thyme</li>
     <li>4 bay leaves</li>
-    <li>1 scoop vanilla ice cream</li>
+    <li class="even">1 scoop vanilla ice cream</li>
 </ul>
 
 <h3>Method</h3>
 <ol>
-    <li>Finely chop the onions and garlic, and add onions to a pan along with the 
+    <li class="even">Finely chop the onions and garlic, and add onions to a pan along with the 
         olive oil. Cook for 10 minutes then add the garlic. Stir for 1 minute.
     </li>
     <li>Turn the heat to high and add all the mince. Brown the meat and then add the 
         herbs and beef stock.
     </li>
-    <li>Add the passata and the bay leaves, bring to the boil and then simmer (lid on) for 1 hour</li>
+    <li class="even">Add the passata and the bay leaves, bring to the boil and then simmer (lid on) for 1 hour</li>
     <li>Remove the lid and simmer for a further 30 minutes, stirring regularly. Add the
         ice cream 5 minutes before the end and mix well.
     </li>
-    <li>Cook up your desired amount of spaghetti, and then add this to the bolognese
+    <li class="even">Cook up your desired amount of spaghetti, and then add this to the bolognese
     sauce with some of the pasta water.
     </li>
     <li>Stir round then serve hot!</li>
